app/frontend/style.css
/* Berkeley Mono Font */
@font-face {
  font-family: "Berkeley Mono";
  src: url("/assets/fonts/BerkeleyMono-Regular.woff2") format("woff2");
}
@font-face {
  font-family: "Berkeley Mono Bold";
  src: url("/assets/fonts/BerkeleyMono-Bold.woff2") format("woff2");
  font-style: bold;
}

/* Set variables */
:root {
  --global-background: #fffcf4;
  --purple: #d19cff;
}

html {
  font-size: 16px;
  overflow: hidden;
  font-family: "Berkeley Mono";
}

body {
  background-color: var(--global-background);
  margin: 0px;
  overflow: hidden;
}

.bold {
  font-family: "Berkeley Mono Bold";
}

a {
  color: var(--purple);
}

/* Contribution Scrolling Animation */
@keyframes scrolling {
  0% { transform: translateX(0); }
  100% { transform: translateX(-100%); }
}

/* Make the contribution carousel animate */
svg {
  display: flex;
  will-change: transform;
  animation: scrolling 15s linear infinite;
}

/* Make a wrapper for all content to be centered */
.wrapper {
  max-width: 800px;
  margin: 0 auto;
  padding: 25px;
  width: 100%;
  box-sizing: border-box;
}
/* Add distance between sections of content */
.wrapper > div {
  margin-bottom: 30px; 
}

/* Correct display for contribution carousel */
#contributions {
  box-sizing: border-box;
  width: 250vh;
  overflow: hidden;
  display: flex;
  > * { flex: 0 0 100%; }
}
/* Link to GitHub under contrib graph */
#contribtext {
  font-size: 12px;
  text-align: right;
  padding-top: 0;
  padding-bottom: 0;
}

/* Website title */
#title {
  font-size: 28px;
  float: left;
}

